--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGOOSE_URI = "mongodb+srv://neyon71133:rjluDggFuLO0hQNm@cluster0.9mky0hu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+JWT_SECRET = "ZxxWQCa3EI/yB26626Qwr1vGsRPDHv0E6JGGZUe/ho0="
